# RFX

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_PYPI.md  README_PYPI_CPU.md  RELEASE_NOTES_v1.0.2.txt  pyproject.toml  setup.py  setup_cpu.py
cuda/: rf_bootstrap.cu  rf_bootstrap.cuh  rf_config_cuda.cu  rf_cuda_memory.cu  rf_cuda_memory.cuh  rf_finishprox.cu  rf_finishprox.cuh  rf_getamat.cu  rf_getamat.cuh  rf_growtree.cu  rf_growtree.cuh  rf_lowrank_helpers.cu  rf_mds_gpu.cu  rf_mds_gpu.cuh  rf_memory.cu  rf_memory.cuh  rf_predict.cu  rf_predict.cuh  rf_proximity.cu  rf_proximity.cuh  rf_proximity_lowrank.cu  rf_proximity_upper_triangle.cu  rf_quantization_kernels.cu  rf_testreebag.cu  rf_testreebag.cuh  rf_varimp.cu  rf_varimp.cuh
docs/: API.md
examples/: covertype_qlora_helper.py  mds_3d_example.py  qlora_covertype_mds_demo.py  rfviz_minimal_demo.py  test_block_sparse_thresholds.py  test_cpu_block_sparse.py  test_final_quantization_1000trees.py  test_oob_convergence_1k.py  test_proximity_4way.py  test_quantization_comparison.py  test_rfviz_minimal.py  test_wine_classification_basic.ipynb  test_wine_classification_importance.ipynb  test_wine_classification_proximity.ipynb  test_wine_gpu_rfviz.py  test_wine_importance.py  test_wine_lowrank_rfviz.py  test_wine_oob_confusion.py  test_wine_step1_oob.py  test_wine_step2_importance.py  test_wine_step3_local_importance.py  wine_basic_classification.py  wine_importance_demo.py  wine_oob_demo.py  wine_qlora_rfviz_demo.py
include/: rf_advanced_optimizations.hpp  rf_arrays.hpp  rf_block_sparse_proximity.hpp  rf_bootstrap.hpp  rf_config.hpp  rf_cuda_config.hpp  rf_data_loader.hpp  rf_finishprox.hpp  rf_getamat.hpp  rf_growtree.hpp  rf_lowrank_helpers.hpp  rf_mds_cpu.hpp  rf_memory_pool.hpp  rf_parallel_tree_growing.hpp  rf_predict.hpp  rf_proximity.hpp  rf_proximity_lowrank.hpp  rf_proximity_optimized.hpp  rf_proximity_upper_triangle.hpp  rf_quantization_kernels.hpp  rf_random_forest.hpp  rf_testreebag.hpp  rf_types.hpp  rf_utilities.hpp  rf_utils.hpp  rf_varimp.hpp  rf_vectorized_ops.hpp
python/: randomforest_py.cpp  rfviz.py
src/: rf_arrays.cpp  rf_bootstrap.cpp  rf_config.cpp  rf_cuda_config.cpp  rf_finishprox.cpp  rf_getamat.cpp  rf_growtree.cpp  rf_growtree_wrapper.cpp  rf_mds_cpu.cpp  rf_memory_pool.cpp  rf_parallel_tree_growing.cpp  rf_predict.cpp  rf_proximity.cpp  rf_proximity_optimized.cpp  rf_random_forest.cpp  rf_testreebag.cpp  rf_utilities.cpp  rf_utils.cpp  rf_varimp.cpp  rf_vectorized_ops.cpp
